--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-.DS_Store
+# Git Ignore to ignore compiled files and Mac .DS_Store files
+
+# Python compiled files
+**/*.pyc
+
+# .DS_Store files
+**/.DS_Store
